# slipway_theme

./: .gitignore  Cargo.toml  LICENSE  justfile  slipway_component.json
.github/workflows/: release.yml
src/: host-config-with-defaults.schema.json  lib.rs  slipway_component.json
themes/: color_dark.json  color_light.json
wit/: slipway.wit
