[package]
name = "slipway_theme"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = "0.41.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"] }
adaptive_cards_host_config = { path = "../slipway_render/src/adaptive_cards_host_config" }
